# userbase

./: CHANGELOG.md  LICENSE  docker-compose.yml  fourmolu.yaml  userbase.cabal
app/: Main.hs
src/: UserBase.hs  Userbase.hs
src/UserBase/Database/: User.hs
src/UserBase/Handlers/: User.hs
src/UserBase/Types/: User.hs
src/Userbase/Database/: User.hs
src/Userbase/Database/Internal/: RunInsert.hs  RunSelect.hs
src/Userbase/Handlers/: User.hs
src/Userbase/Types/: Errors.hs  User.hs  UserInput.hs
