cabal-version:      3.0
name:               userbase
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alexander Johnston
maintainer:         Aliics@hotmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
      UserBase,
      UserBase.Handlers.User
    -- other-modules:
    -- other-extensions:
    build-depends:    
      base ^>=4.17.2.1,
      text,
      aeson,
      scotty,
      wai-extra,
      http-types,
      opaleye,
      postgresql-simple,
      product-profunctors
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options: -Wall -XOverloadedStrings -XImplicitParams

executable userbase
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        userbase,
        scotty,
        postgresql-simple

    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -Wall -threaded

test-suite userbase-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        userbase
